as i thought the audio file wasnt autoplaying becasue i hadnt pushed it previously, now i have removed the controls so it should autoplay and not show any controls

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     <!-- adding audio -->
 
-    <audio autoplay controls loop >
+    <audio autoplay loop >
         <source src="assets/music/Game_of_Thrones.mp3" type="audio/mp3">
     </audio>
 
