--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     <!-- adding audio -->
 
-    <audio autoplay loop >
+    <audio controls autoplay loop >
         <source src="assets/music/Game_of_Thrones.mp3" type="audio/mp3">
     </audio>
 
