--- a/index.html
+++ b/index.html
@@ -2,80 +2,84 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>GOT HangMan</title>
-    <script src="assets/javascript/game.js"></script>
-    <!-- linking reset css disabled reset css since it messed up font size/argins can fix later -->
-    <!-- <link rel="stylesheet" href="assets/css/reset.css"> -->
-    <!-- linking css style sheet -->
-    <link rel="stylesheet" href="assets/css/style.css">
-    <!-- linking GOT font css -->
-    <link rel="stylesheet" href="assets/GOT_font/stylesheet.css">
-    <!-- JQuery -->
-    <script src="https://code.jquery.com/jquery.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>GOT HangMan</title>
+  <script src="assets/javascript/game.js"></script>
+  <!-- linking reset css disabled reset css since it messed up font size/argins can fix later -->
+  <link rel="stylesheet" href="assets/css/reset.css">
+  <!-- linking css style sheet -->
+  <link rel="stylesheet" href="assets/css/style.css">
+  <!-- linking GOT font css -->
+  <link rel="stylesheet" href="assets/GOT_font/stylesheet.css">
+  <!-- JQuery -->
+  <script src="https://code.jquery.com/jquery.js"></script>
 
 
 </head>
 
 <body>
-    <!-- adding audio -->
+  <!-- adding audio -->
+  <audio controls autoplay loop hidden>
+    <source src="assets/music/Game_of_Thrones.mp3" type="audio/mp3">
+  </audio>
 
-    <audio controls autoplay loop hidden>
-        <source src="assets/music/Game_of_Thrones.mp3" type="audio/mp3">
-    </audio>
+  <!-- titles -->
+  <h1> Game Of Thrones</h1>
+  <h4>Presents: </h4>
+  <h2>Battle of the bastards</h2>
 
-    <!-- titles -->
-    <h1> Game Of Thrones</h1>
-    <h4>Presents: </h4><h2>Battle of the bastards</h2>
-
-    <!-- Statement of press any key to get Started -->
-    <p> Press any key to get started!</p>
-    <div id="wins">
-        Wins:
-    </div>
-    <div id="losses">
-        Losses:
-    </div>
+  <!-- Statement of press any key to get Started -->
+  <p> Press any key to get started!</p>
 
 
-
-
-<!-- adding div so letter display -->
-    <div id="display"></div>
-    
-    
-    <div id="wordschosen">
-
-    </div>
-
-
-
-
-
-    <script type="text/javascript">
-        $(document).ready(function () {
-
-
-
-            document.onkeyup = function (event) {
-                // console.log(event.key);
-                var userLetter = $("<div>");
-                userLetter.addClass("letter firdge-color");
-                userLetter.text($(this).attr("data-letter"));
-                $("#display").append(userLetter);
-            }
+  <div id="guessed"> </div>
 
 
 
 
 
 
-        });
-    </script>
+
+  <script type="text/javascript">
+
+    var wordsToGuess = ["MEEREEN", "BRAAVOS", "VALYRIA", "MAESTER", "WILDING", "THE WALL", "JON SNOW"];
+    var possibleUserGuess = ["a", "b", "c", "d", "e", "f", "g", "h", "i", "j", "k", "l", "m", "n", "o", "p", "q", "r", "s", "t", "u", "v", "w", "x", "y", "z"]
+    var lettersGuessed = [];
+
+    document.onkeyup = function (event) {
+      var userguess = String.fromCharCode(event.keyCode);
+      // console.log(userguess);
+
+      // the below pushes the usersguess ino the lettersGuessed variable
+      lettersGuessed.push(userguess);
+      console.log(lettersGuessed);
+      console.log(lettersGuessed.length);
+
+      // the below displays the lettersguessed variable into the screen
+      var html = "<p>words you have guessed</p>" + "<p>" + lettersGuessed.join(',') + "</p>";
+      document.querySelector('#guessed').innerHTML = html;
 
 
+
+      // for (var i = 0; i < possibleUserGuess.length; i++) {
+
+      //   // console.log(possibleUserGuess[i])
+
+      //     if (userChoice === possibleUserGuess[i]) {
+      //     console.log("good word choice");
+      //     return;
+      //   } else {
+      //     alert("please select letter from alphabet only");
+      //     return;
+      //   }
+      // }
+
+
+    }
+
+  </script>
 </body>
 
 </html>
