added a few more words into the possible words to be guessed

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
   <script type="text/javascript">
     var started = false;
-    var wordsToGuess = ["MEEREEN", "BRAAVOS", "VALYRIA", "MAESTER", "WILDING"];
+    var wordsToGuess = ["MEEREEN", "BRAAVOS", "VALYRIA", "MAESTER", "WILDING", "ABOLISH", "ABANDON", "ABSORBS", "ACCEPTS", "ACCOUNT", "AMAZING", "ANXIETY", "COMPLEX"];
     var wordChosenByComputer = wordsToGuess[Math.floor(Math.random() * wordsToGuess.length)];
     var wordChosenByComputerBrokenDown = [];
     var lettersGuessedWrong = [];
